// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Pager/Relay Relay Pager 1`] = `
<ul
  className="pagination"
>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      disabled={false}
      href="/?before=bbb&last="
    >
      <span
        aria-hidden="true"
      >
        ‹
      </span>
      <span
        className="visually-hidden"
      >
        Previous
      </span>
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      disabled={false}
      href="/?after=ccc&first="
    >
      <span
        aria-hidden="true"
      >
        ›
      </span>
      <span
        className="visually-hidden"
      >
        Next
      </span>
    </a>
  </li>
</ul>
`;

exports[`Storyshots Components/Pager/Relay Relay Pager No Next 1`] = `
<ul
  className="pagination"
>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      disabled={false}
      href="/?before=bbb&last="
    >
      <span
        aria-hidden="true"
      >
        ‹
      </span>
      <span
        className="visually-hidden"
      >
        Previous
      </span>
    </a>
  </li>
  <li
    className="page-item disabled"
  >
    <span
      className="page-link"
      disabled={true}
      href="/"
    >
      <span
        aria-hidden="true"
      >
        ›
      </span>
      <span
        className="visually-hidden"
      >
        Next
      </span>
    </span>
  </li>
</ul>
`;

exports[`Storyshots Components/Pager/Relay Relay Pager No Previous 1`] = `
<ul
  className="pagination"
>
  <li
    className="page-item disabled"
  >
    <span
      className="page-link"
      disabled={true}
      href="/"
    >
      <span
        aria-hidden="true"
      >
        ‹
      </span>
      <span
        className="visually-hidden"
      >
        Previous
      </span>
    </span>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      disabled={false}
      href="/?after=ccc&first="
    >
      <span
        aria-hidden="true"
      >
        ›
      </span>
      <span
        className="visually-hidden"
      >
        Next
      </span>
    </a>
  </li>
</ul>
`;
